# py-fortranformat

./: .gitignore  .hgignore  BUILD_README.txt  CHANGELOG.md  CONSTANTS.py  Fortran2003FormatTokenizer.py  Fortran66FormatTokenizer.py  Fortran77FormatTokenizer.py  Fortran90FormatTokenizer.py  Fortran95FormatTokenizer.py  FortranRecordReader.py  FortranRecordWriter.py  MANIFEST  Makefile  README.md  README.txt  TESTS_README.txt  _build_f77_lexer_parser.py  _edit_descriptors.py  _input.py  _input_from_f77_tokens.py  _lexer.py  _output.py  _parser.py  _tokens.py  compose.py  misc.py  parse.py  parse_format.py  poetry.toml  pyproject.toml  requirements.txt  run_tests  runtests.txt  setup.cfg  setup.py  tokenise_f2003_format.py  tokenise_f66_format.py  tokenise_f77_format.py  tokenise_f90_format.py  (+2 more)
.github/workflows/: workflow_actions.yml
docs/examples/: README.md
docs/spec/: f77 13 FORMAT SPECIFICATION.htm
docs/wiki/: guide.md  performance.md
edit_descriptors/: A.py  BN.py  BZ.py  Colon.py  D.py  E.py  EditDescriptor.py  F.py  G.py  H.py  I.py  L.py  P.py  S.py  SP.py  SS.py  Slash.py  StringLiteral.py  T.py  TL.py  TR.py  X.py  __init__.py  get_token.py
exceptions/: InvalidFortranFormat.py
f77/: _output.py  _tokens.py
fortranformat/: FortranRecordReader.py  FortranRecordWriter.py  __init__.py  _edit_descriptors.py  _input.py  _lexer.py  _misc.py  _output.py  _parser.py  config.py
fortranformat.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
fortranformat/spec/f77/: 13 FORMAT SPECIFICATION.htm
fortranformat/tests/autogen/: gen_input_tests.py  gen_output_tests.py  run_tests
fortranformat/tests/input/: a-ed-input-tests.py  multi-ed-tests.py
scripts/: buildtests.sh  runtests.sh
spec/examples/: Note.txt
tests/: lexer_test.txt  output_get_sign_test.txt  output_test.txt  output_write_string_test.txt  parser_test.txt
tests/autogen/: build_unittests.py  gen_input_tests.py  gen_output_tests.py  run_tests  run_tests.bat
tests/autogen/generate/: build_unittests.py  gen_input_tests.py  gen_output_tests.py
tests/characterise_platform/: ALLOW_ZERO_WIDTH_EDS.f
tests/handwritten/: ALLOW_ZERO_WIDTH_EDS-config-tests.py  a-ed-input-tests.py  g-ed-output-tests.py  multi-input-ed-tests.py  reversion-format-tests.py  test_a_ed_input.py  test_multi_input_ed.py  test_reversion_format.py
tests/handwritten/FortranRecordReader/: test_FortranRecordReader.py
tests/handwritten/FortranRecordWriter/: FortranRecordWriter_tests.py  test_FortranRecordWriter.py
tests/handwritten/apostrophe-ed/: apostrophe-ed-output-test.py
tests/handwritten/apostrophe_ed/: test_apostrophe_ed_output.py
tests/handwritten/config/: config-G_INPUT_TRIAL_EDS-tests.py  config-INTEGER_OVERFLOW-tests.py  config-RECORD_SEPARATOR-tests.py  config-RET_UNWRITTEN_VARS_NONE-tests.py  config-RET_WRITTEN_VARS_ONLY-tests.py  config-misc-tests.py  test_G_INPUT_TRIAL_EDS.py  test_RET_UNWRITTEN_VARS_NONE.py  test_RET_WRITTEN_VARS_ONLY.py
tests/handwritten/default_vals/: default-vals.f  test_default_output.py
tests/handwritten/doctests/: parser_test.txt
tests/handwritten/e-ed/: e-ed-output-tests.py  e-output.f
tests/handwritten/e_ed/: e-output.f  test_e_ed_output.py
tests/handwritten/f-ed/: f-ed-output-ISSUE17.f  f-ed-output-tests.py  f-ed-output.f
tests/handwritten/f_ed/: test_f_ed_output.py  test_f_ed_output_ISSUE28.py
tests/handwritten/g-ed/: g-config-input-tests.py  g-ed-output-tests.py  g-output.f
tests/handwritten/g_ed/: test_g_config_input.py  test_g_ed_output.py
tests/input/: a-ed-input-tests.py  g-config-input-tests.py  multi-ed-tests.py
tests/minimal/: test_a_output.py  test_b_input_1.py  test_b_input_2.py  test_b_output.py  test_bn-a_output.py  test_bn-b_output.py  test_bn-d_output.py  test_bn-e_output.py  test_bn-en_output.py  test_bn-es_output.py  test_bn-f_output.py  test_bn-g_output.py  test_bn-i_output.py  test_bn-l_output.py  test_bn-o_output.py  test_bn-slash_output.py  test_bn-z_output.py  test_bn_input_1.py  test_bn_output.py  test_bz-a_output.py  test_bz-b_output.py  test_bz-d_output.py  test_bz-e_output.py  test_bz-en_output.py  test_bz-es_output.py  test_bz-f_output.py  test_bz-g_output.py  test_bz-i_output.py  test_bz-l_output.py  test_bz-o_output.py  test_bz-slash_output.py  test_bz-z_output.py  test_bz_input_1.py  test_bz_output.py  test_colon-a_output.py  test_colon-b_output.py  test_colon-d_output.py  test_colon-e_output.py  test_colon-en_output.py  test_colon-es_output.py  (+149 more)
tests/misc/: ALLOW_ZERO_WIDTH_EDS-config-tests.py  a-ed-input-tests.py  h-ed-input-tests.py  h-ed-output-tests.py  multi-input-ed-tests.py  reversion-format-tests.py
tests/misc/sandbox/: test.f
tests/performance/: PERFORMANCE.md  load_f_ed.py  test.py
tests/samples/: compile_doctests_from_samples.py
tokens/: A.py  BN.py  BZ.py  CharacterLiteral.py  Colon.py  D.py  E.py  F.py  FormatGroup.py  G.py  H.py  I.py  L.py  P.py  S.py  SP.py  SS.py  Slash.py  T.py  TL.py  TR.py  X.py  __init__.py  get_token.py
(+680 files in other folders)
