[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fortranformat"
dynamic = ["version"]
dependencies = []
requires-python = ">=3.9"
authors = [
  {name="Brendan Arnold", email="brendanarnold@gmail.com"}
]
maintainers = [
  {name="Brendan Arnold", email="brendanarnold@gmail.com"}
]
description = "Mimics Fortran textual IO in Python."
readme = "README.md"
license = {file = "LICENSE"}
keywords=['fortran', 'io', 'interface', 'format']
classifiers = [
    'Development Status :: 4 - Beta',
    'Environment :: Console',
    # Indicate who your project is intended for
    'Intended Audience :: Science/Research',
    'Intended Audience :: Developers',
    'Topic :: Text Processing :: General',
    'Topic :: Software Development :: Interpreters',
    'Topic :: Scientific/Engineering',
    # Software license
    'License :: OSI Approved :: MIT License',
    'Natural Language :: English',
    'Operating System :: OS Independent',
    # Specify supported Python versions here.
    'Programming Language :: Fortran',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
]

[project.optional-dependencies]
test = [
  "pytest>=8.3.3"
]
build = [
  "build>=1.2.2"
]

[project.urls]
Repository = "https://github.com/brendanarnold/py-fortranformat"
Documentation = "https://github.com/brendanarnold/py-fortranformat/blob/master/docs/wiki/guide.md"

[tool.hatch.version]
# This tells hatch to look in the in __init__.py for the __version__ tag
# See https://hatch.pypa.io/1.12/version/
path = "fortranformat/__init__.py"

[tool.pytest.ini_options]
testpaths = [
  "tests",
]